--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "autoprefixer": "9.8.6",
     "cssnano": "^4.1.10",
     "node-sass": "^5.0.0",
-    "postcss": "^8.2.3"
+    "npm-run-all": "^4.1.5",
+    "parcel": "^1.12.4",
+    "postcss": "^8.2.3",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "core-js": "^3.8.2",
