--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "parcel:p": "parcel build src/html/index.html --no-cache",
     "redirects": "cp src/html/_redirects dist/_redirects",
     "start": "run-s rf:d clear parcel:d",
-    "build": "run-s rf:d rf:c parcel:p redirects",
+    "build": "run-s rf:d rf:c clear parcel:p redirects",
     "tsinit": "touch tsconfig.json && npm i -D typescript @types/react @types/react-dom @types/react-router-dom",
     "tsUN": "rm tsconfig.json && npm un-D typescript @types/react @types/react-dom @types/react-router-dom ",
     "setup": "find . -name \".gitkeep\" -type f -delete && rm -rf .git && git init && npm i"
@@ -22,14 +22,17 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@prerenderer/renderer-puppeteer": "^0.2.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "9.8.6",
     "cssnano": "^4.1.10",
     "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "parcel": "^1.12.4",
+    "parcel-plugin-prerender": "^1.4.1",
     "postcss": "^8.2.3",
     "rimraf": "^3.0.2",
     "typescript": "^4.1.3"
@@ -38,6 +41,7 @@
     "core-js": "^3.8.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.7"
   },
