--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "parcel:p": "parcel build src/html/index.html --no-cache",
     "redirects": "cp src/html/_redirects dist/_redirects",
     "start": "run-s rf:d clear parcel:d",
-    "build": "run-s rf:d rf:c clear parcel:p redirects",
+    "tb": "run-s rf:d rf:c clear parcel:p redirects",
+    "build": "run-s rf:d rf:c parcel:p redirects",
     "tsinit": "touch tsconfig.json && npm i -D typescript @types/react @types/react-dom @types/react-router-dom",
     "tsUN": "rm tsconfig.json && npm un-D typescript @types/react @types/react-dom @types/react-router-dom ",
     "setup": "find . -name \".gitkeep\" -type f -delete && rm -rf .git && git init && npm i"
