--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "parcel:d": "parcel src/html/index.html",
     "parcel:p": "parcel build src/html/index.html --no-cache",
     "redirects": "cp src/html/_redirects dist/_redirects",
+    "sitemap": "cp src/html/sitemap.xml dist/sitemap.xml",
     "start": "run-s rf:d clear parcel:d",
-    "tb": "run-s rf:d rf:c clear parcel:p redirects",
-    "build": "run-s rf:d rf:c parcel:p redirects",
+    "tb": "run-s rf:d rf:c clear parcel:p redirects sitemap",
+    "build": "run-s rf:d rf:c parcel:p redirects sitemap",
     "tsinit": "touch tsconfig.json && npm i -D typescript @types/react @types/react-dom @types/react-router-dom",
     "tsUN": "rm tsconfig.json && npm un-D typescript @types/react @types/react-dom @types/react-router-dom ",
     "setup": "find . -name \".gitkeep\" -type f -delete && rm -rf .git && git init && npm i"
