--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "react parcel custom build",
   "main": "src/html/index.html",
   "scripts": {
+    "hs": "http-server ./dist/ -b -g",
     "rf:d": "rimraf dist/*",
     "rf:c": "rimraf .cache/*",
     "clear": "clear",
     "parcel:d": "parcel src/html/index.html",
-    "parcel:p": "parcel build src/html/index.html --no-cache",
-    "redirects": "cp src/html/_redirects dist/_redirects",
-    "sitemap": "cp src/html/sitemap.xml dist/sitemap.xml",
-    "robots": "cp src/html/robots.txt dist/robots.txt",
+    "parcel:p": "parcel build src/html/index.html --no-source-maps",
+    "extras": "cp src/html/_redirects dist/_redirects && cp src/html/sitemap.xml dist/sitemap.xml && cp src/html/robots.txt dist/robots.txt",
     "start": "run-s rf:d clear parcel:d",
-    "tb": "run-s rf:d rf:c clear parcel:p redirects sitemap robots",
-    "build": "run-s rf:d rf:c parcel:p redirects sitemap robots",
+    "tb": "run-s rf:d rf:c clear parcel:p extras hs",
+    "build": "run-s rf:d rf:c parcel:p extras",
     "tsinit": "touch tsconfig.json && npm i -D typescript @types/react @types/react-dom @types/react-router-dom",
     "tsUN": "rm tsconfig.json && npm un-D typescript @types/react @types/react-dom @types/react-router-dom ",
     "setup": "find . -name \".gitkeep\" -type f -delete && rm -rf .git && git init && npm i"
@@ -26,6 +25,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@prerenderer/renderer-puppeteer": "^0.2.0",
+    "@types/loadable__component": "^5.13.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
@@ -41,6 +41,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@loadable/component": "^5.14.1",
     "core-js": "^3.8.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -72,7 +73,7 @@
   "browserslist": {
     "production": [
       "defaults",
-      ">0.2%",
+      ">0.25%",
       "not dead",
       "not op_mini all"
     ],
