--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "react parcel custom build",
   "main": "src/html/index.html",
   "scripts": {
-    "hs": "http-server ./dist/ -b -g",
+    "hs": "http-server ./dist/ -g",
     "rf:d": "rimraf dist/*",
     "rf:c": "rimraf .cache/*",
     "clear": "clear",
     "parcel:d": "parcel src/html/index.html",
     "parcel:p": "parcel build src/html/index.html --no-source-maps",
     "extras": "cp src/html/_redirects dist/_redirects && cp src/html/sitemap.xml dist/sitemap.xml && cp src/html/robots.txt dist/robots.txt",
+    "gzip:js": "gzip dist/*.js && gzip dist/**/*.js && rm -rf dist/*.js && rm -rf dist/**/*.js ",
+    "gzip:css": "gzip dist/*.css && gzip dist/**/*.css && rm -rf dist/*.css && rm -rf dist/**/*.css ",
+    "gzip:html": "gzip dist/*.html && gzip dist/**/*.html && rm -rf dist/*.html && rm -rf dist/**/*.html ",
+    "gzip:all": "run-p gzip:js gzip:css gzip:html",
     "start": "run-s rf:d clear parcel:d",
-    "tb": "run-s rf:d rf:c clear parcel:p extras hs",
+    "tb": "run-s rf:d rf:c clear parcel:p extras gzip:all hs",
     "build": "run-s rf:d rf:c parcel:p extras",
     "tsinit": "touch tsconfig.json && npm i -D typescript @types/react @types/react-dom @types/react-router-dom",
     "tsUN": "rm tsconfig.json && npm un-D typescript @types/react @types/react-dom @types/react-router-dom ",
@@ -29,6 +33,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "9.8.6",
     "cssnano": "^4.1.10",
@@ -46,6 +51,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.7"
   },
