modified gzip scripts

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "parcel:d": "parcel src/html/index.html",
     "parcel:p": "parcel build src/html/index.html --no-source-maps",
     "extras": "cp src/html/_redirects dist/_redirects && cp src/html/sitemap.xml dist/sitemap.xml && cp src/html/robots.txt dist/robots.txt",
-    "gzip:js": "gzip dist/*.js && gzip dist/**/*.js && rm -rf dist/*.js && rm -rf dist/**/*.js ",
-    "gzip:css": "gzip dist/*.css && gzip dist/**/*.css && rm -rf dist/*.css && rm -rf dist/**/*.css ",
+    "gzip:js": "gzip dist/*.js && rm -rf dist/*.js",
+    "gzip:css": "gzip dist/*.css && rm -rf dist/*.css",
     "gzip:html": "gzip dist/*.html && gzip dist/**/*.html && rm -rf dist/*.html && rm -rf dist/**/*.html ",
     "gzip:all": "run-p gzip:js gzip:css gzip:html",
     "start": "run-s rf:d clear parcel:d",
