--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "react-parcel",
+  "name": "music-site",
   "version": "2.0.0",
-  "description": "react parcel custom build",
+  "description": "music site for portfolio",
   "main": "src/html/index.html",
   "scripts": {
-    "hs": "http-server ./dist/ -g",
+    "hs": "http-server dist/ -g",
     "rf:d": "rimraf dist/*",
     "rf:c": "rimraf .cache/*",
     "clear": "clear",
     "parcel:d": "parcel src/html/index.html",
     "parcel:p": "parcel build src/html/index.html --no-source-maps",
     "extras": "cp src/html/_redirects dist/_redirects && cp src/html/sitemap.xml dist/sitemap.xml && cp src/html/robots.txt dist/robots.txt",
+    "nord": "cp src/html/sitemap.xml dist/sitemap.xml && cp src/html/robots.txt dist/robots.txt",
     "gzip:js": "gzip dist/*.js && gzip dist/**/*.js && rm -rf dist/*.js && rm -rf dist/**/*.js ",
     "gzip:css": "gzip dist/*.css && gzip dist/**/*.css && rm -rf dist/*.css && rm -rf dist/**/*.css ",
     "gzip:html": "gzip dist/*.html && gzip dist/**/*.html && rm -rf dist/*.html && rm -rf dist/**/*.html ",
     "gzip:all": "run-p gzip:js gzip:css gzip:html",
     "start": "run-s rf:d clear parcel:d",
     "tb": "run-s rf:d rf:c clear parcel:p extras gzip:all hs",
-    "build": "run-s rf:d rf:c parcel:p extras",
+    "build": "run-s rf:d rf:c parcel:p nord",
     "tsinit": "touch tsconfig.json && npm i -D typescript @types/react @types/react-dom @types/react-router-dom",
     "tsUN": "rm tsconfig.json && npm un-D typescript @types/react @types/react-dom @types/react-router-dom ",
     "setup": "find . -name \".gitkeep\" -type f -delete && rm -rf .git && git init && npm i"
